Remove versioning from icon links in index.html
Updated icon links to remove versioning query parameters.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Daily menus, hours, and live updates in a clean, fast view. Check what’s open, spot something tasty, and decide where to eat—quickly.">
     <link rel="canonical" href="https://www.wolfiedine.com/">
     <link rel="icon" href="/favicon.ico?v=20260123" sizes="any">
-    <link rel="icon" type="image/png" sizes="16x16" href="/wolfiedine_icon_16.png?v=20260123">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=20260123">
-    <link rel="icon" type="image/png" sizes="48x48" href="/wolfiedine_icon_48.png?v=20260123">
-    <link rel="icon" type="image/png" sizes="192x192" href="/wolfiedine_icon_192.png?v=20260123">
+    <link rel="icon" type="image/png" sizes="16x16" href="/wolfiedine_icon_16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="/wolfiedine_icon_48.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/wolfiedine_icon_192.png">
     <style>
         * {
             margin: 0;
