--- a/index.html
+++ b/index.html
@@ -456,6 +456,12 @@
             .dining-hall.collapsed .hall-header::after { content: "▸"; }
         }
 
+
+        @media (max-width: 768px) {
+            html { font-size: 200%; }
+            body { -webkit-text-size-adjust: 200%; text-size-adjust: 200%; }
+        }
+
 </style>
 
 
