Add Open Graph meta tags for social sharing
Added Open Graph meta tags for improved sharing.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" id="viewport-meta" content="width=device-width, initial-scale=1.0">
     <title>Wolfie Dine</title>
     <meta name="description" content="Daily menus, hours, and live updates in a clean, fast view. Check what’s open, spot something tasty, and decide where to eat—quickly.">
+    <meta property="og:title" content="Wolfie Dine" />
+    <meta property="og:site_name" content="Wolfie Dine" />
+    <meta name="application-name" content="Wolfie Dine" />
+    <meta name="apple-mobile-web-app-title" content="Wolfie Dine" />
     <link rel="canonical" href="https://www.wolfiedine.com/">
     <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="icon" type="image/png" sizes="16x16" href="/wolfiedine_icon_16.png">
