Update founder's major in index.html

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                     Wolfie Dine is a menu aggregator for the Stony Brook University dining halls that lets students see all meal options in one place.
                 </p>
                 <p>
-                    Wolfie Dine was founded in January 2025 by Tina Yu [BCM '29] and Chenhao Yu [EE '28]. It's maintained by the same student team and updates daily.
+                    Wolfie Dine was founded in January 2025 by Tina Yu [BCM '29] and Chenhao Yu [CpE '28]. It's maintained by the same student team and updates daily.
                 </p>
                 <p>
                     See the <a href="https://stonybrook.nutrislice.com" target="_blank" rel="noopener noreferrer">official Dining website</a>
